exports[`css-spring matches snapshots 1`] = `
Object {
  "0%": Object {
    "opacity": 0.02,
  },
  "1%": Object {
    "opacity": 0.05,
  },
  "10%": Object {
    "opacity": 0.68,
  },
  "100%": Object {
    "opacity": 1,
  },
  "11%": Object {
    "opacity": 0.75,
  },
  "12%": Object {
    "opacity": 0.82,
  },
  "13%": Object {
    "opacity": 0.88,
  },
  "14%": Object {
    "opacity": 0.94,
  },
  "15%": Object {
    "opacity": 0.99,
  },
  "16%": Object {
    "opacity": 1.04,
  },
  "17%": Object {
    "opacity": 1.08,
  },
  "18%": Object {
    "opacity": 1.11,
  },
  "19%": Object {
    "opacity": 1.14,
  },
  "2%": Object {
    "opacity": 0.1,
  },
  "20%": Object {
    "opacity": 1.16,
  },
  "21%": Object {
    "opacity": 1.18,
  },
  "22%": Object {
    "opacity": 1.19,
  },
  "23%": Object {
    "opacity": 1.19,
  },
  "24%": Object {
    "opacity": 1.2,
  },
  "25%": Object {
    "opacity": 1.19,
  },
  "26%": Object {
    "opacity": 1.19,
  },
  "27%": Object {
    "opacity": 1.18,
  },
  "28%": Object {
    "opacity": 1.17,
  },
  "29%": Object {
    "opacity": 1.16,
  },
  "3%": Object {
    "opacity": 0.16,
  },
  "30%": Object {
    "opacity": 1.15,
  },
  "31%": Object {
    "opacity": 1.13,
  },
  "32%": Object {
    "opacity": 1.12,
  },
  "33%": Object {
    "opacity": 1.1,
  },
  "34%": Object {
    "opacity": 1.09,
  },
  "35%": Object {
    "opacity": 1.07,
  },
  "36%": Object {
    "opacity": 1.06,
  },
  "37%": Object {
    "opacity": 1.04,
  },
  "38%": Object {
    "opacity": 1.03,
  },
  "39%": Object {
    "opacity": 1.02,
  },
  "4%": Object {
    "opacity": 0.22,
  },
  "40%": Object {
    "opacity": 1.01,
  },
  "41%": Object {
    "opacity": 1,
  },
  "42%": Object {
    "opacity": 0.99,
  },
  "43%": Object {
    "opacity": 0.98,
  },
  "44%": Object {
    "opacity": 0.98,
  },
  "45%": Object {
    "opacity": 0.97,
  },
  "46%": Object {
    "opacity": 0.97,
  },
  "47%": Object {
    "opacity": 0.96,
  },
  "5%": Object {
    "opacity": 0.29,
  },
  "52%": Object {
    "opacity": 0.96,
  },
  "53%": Object {
    "opacity": 0.97,
  },
  "56%": Object {
    "opacity": 0.97,
  },
  "57%": Object {
    "opacity": 0.98,
  },
  "6%": Object {
    "opacity": 0.37,
  },
  "60%": Object {
    "opacity": 0.98,
  },
  "61%": Object {
    "opacity": 0.99,
  },
  "63%": Object {
    "opacity": 0.99,
  },
  "64%": Object {
    "opacity": 1,
  },
  "69%": Object {
    "opacity": 1,
  },
  "7%": Object {
    "opacity": 0.45,
  },
  "70%": Object {
    "opacity": 1.01,
  },
  "74%": Object {
    "opacity": 1.01,
  },
  "75%": Object {
    "opacity": 1,
  },
  "8%": Object {
    "opacity": 0.53,
  },
  "9%": Object {
    "opacity": 0.6,
  },
}
`;

exports[`css-spring matches snapshots 2`] = `
Object {
  "0%": Object {
    "transform": "translate3d(0, 11.62%, 0)",
  },
  "1%": Object {
    "transform": "translate3d(0, 14.64%, 0)",
  },
  "10%": Object {
    "transform": "translate3d(0, 71.08%, 0)",
  },
  "100%": Object {
    "transform": "translate3d(0, 99.87%, 0)",
  },
  "11%": Object {
    "transform": "translate3d(0, 77.58%, 0)",
  },
  "12%": Object {
    "transform": "translate3d(0, 83.72%, 0)",
  },
  "13%": Object {
    "transform": "translate3d(0, 89.4%, 0)",
  },
  "14%": Object {
    "transform": "translate3d(0, 94.6%, 0)",
  },
  "15%": Object {
    "transform": "translate3d(0, 99.27%, 0)",
  },
  "16%": Object {
    "transform": "translate3d(0, 103.39%, 0)",
  },
  "17%": Object {
    "transform": "translate3d(0, 106.96%, 0)",
  },
  "18%": Object {
    "transform": "translate3d(0, 109.98%, 0)",
  },
  "19%": Object {
    "transform": "translate3d(0, 112.45%, 0)",
  },
  "2%": Object {
    "transform": "translate3d(0, 18.83%, 0)",
  },
  "20%": Object {
    "transform": "translate3d(0, 114.4%, 0)",
  },
  "21%": Object {
    "transform": "translate3d(0, 115.86%, 0)",
  },
  "22%": Object {
    "transform": "translate3d(0, 116.86%, 0)",
  },
  "23%": Object {
    "transform": "translate3d(0, 117.43%, 0)",
  },
  "24%": Object {
    "transform": "translate3d(0, 117.62%, 0)",
  },
  "25%": Object {
    "transform": "translate3d(0, 117.47%, 0)",
  },
  "26%": Object {
    "transform": "translate3d(0, 117.03%, 0)",
  },
  "27%": Object {
    "transform": "translate3d(0, 116.33%, 0)",
  },
  "28%": Object {
    "transform": "translate3d(0, 115.42%, 0)",
  },
  "29%": Object {
    "transform": "translate3d(0, 114.35%, 0)",
  },
  "3%": Object {
    "transform": "translate3d(0, 23.98%, 0)",
  },
  "30%": Object {
    "transform": "translate3d(0, 113.14%, 0)",
  },
  "31%": Object {
    "transform": "translate3d(0, 111.84%, 0)",
  },
  "32%": Object {
    "transform": "translate3d(0, 110.49%, 0)",
  },
  "33%": Object {
    "transform": "translate3d(0, 109.11%, 0)",
  },
  "34%": Object {
    "transform": "translate3d(0, 107.73%, 0)",
  },
  "35%": Object {
    "transform": "translate3d(0, 106.37%, 0)",
  },
  "36%": Object {
    "transform": "translate3d(0, 105.07%, 0)",
  },
  "37%": Object {
    "transform": "translate3d(0, 103.83%, 0)",
  },
  "38%": Object {
    "transform": "translate3d(0, 102.67%, 0)",
  },
  "39%": Object {
    "transform": "translate3d(0, 101.6%, 0)",
  },
  "4%": Object {
    "transform": "translate3d(0, 29.88%, 0)",
  },
  "40%": Object {
    "transform": "translate3d(0, 100.63%, 0)",
  },
  "41%": Object {
    "transform": "translate3d(0, 99.77%, 0)",
  },
  "42%": Object {
    "transform": "translate3d(0, 99.01%, 0)",
  },
  "43%": Object {
    "transform": "translate3d(0, 98.36%, 0)",
  },
  "44%": Object {
    "transform": "translate3d(0, 97.82%, 0)",
  },
  "45%": Object {
    "transform": "translate3d(0, 97.38%, 0)",
  },
  "46%": Object {
    "transform": "translate3d(0, 97.05%, 0)",
  },
  "47%": Object {
    "transform": "translate3d(0, 96.8%, 0)",
  },
  "48%": Object {
    "transform": "translate3d(0, 96.65%, 0)",
  },
  "49%": Object {
    "transform": "translate3d(0, 96.57%, 0)",
  },
  "5%": Object {
    "transform": "translate3d(0, 36.33%, 0)",
  },
  "50%": Object {
    "transform": "translate3d(0, 96.56%, 0)",
  },
  "51%": Object {
    "transform": "translate3d(0, 96.62%, 0)",
  },
  "52%": Object {
    "transform": "translate3d(0, 96.73%, 0)",
  },
  "53%": Object {
    "transform": "translate3d(0, 96.89%, 0)",
  },
  "54%": Object {
    "transform": "translate3d(0, 97.08%, 0)",
  },
  "55%": Object {
    "transform": "translate3d(0, 97.3%, 0)",
  },
  "56%": Object {
    "transform": "translate3d(0, 97.55%, 0)",
  },
  "57%": Object {
    "transform": "translate3d(0, 97.81%, 0)",
  },
  "58%": Object {
    "transform": "translate3d(0, 98.07%, 0)",
  },
  "59%": Object {
    "transform": "translate3d(0, 98.34%, 0)",
  },
  "6%": Object {
    "transform": "translate3d(0, 43.16%, 0)",
  },
  "60%": Object {
    "transform": "translate3d(0, 98.61%, 0)",
  },
  "61%": Object {
    "transform": "translate3d(0, 98.87%, 0)",
  },
  "62%": Object {
    "transform": "translate3d(0, 99.12%, 0)",
  },
  "63%": Object {
    "transform": "translate3d(0, 99.36%, 0)",
  },
  "64%": Object {
    "transform": "translate3d(0, 99.58%, 0)",
  },
  "65%": Object {
    "transform": "translate3d(0, 99.78%, 0)",
  },
  "66%": Object {
    "transform": "translate3d(0, 99.96%, 0)",
  },
  "67%": Object {
    "transform": "translate3d(0, 100.12%, 0)",
  },
  "68%": Object {
    "transform": "translate3d(0, 100.25%, 0)",
  },
  "69%": Object {
    "transform": "translate3d(0, 100.37%, 0)",
  },
  "7%": Object {
    "transform": "translate3d(0, 50.19%, 0)",
  },
  "70%": Object {
    "transform": "translate3d(0, 100.47%, 0)",
  },
  "71%": Object {
    "transform": "translate3d(0, 100.54%, 0)",
  },
  "72%": Object {
    "transform": "translate3d(0, 100.6%, 0)",
  },
  "73%": Object {
    "transform": "translate3d(0, 100.64%, 0)",
  },
  "74%": Object {
    "transform": "translate3d(0, 100.66%, 0)",
  },
  "75%": Object {
    "transform": "translate3d(0, 100.67%, 0)",
  },
  "76%": Object {
    "transform": "translate3d(0, 100.67%, 0)",
  },
  "77%": Object {
    "transform": "translate3d(0, 100.65%, 0)",
  },
  "78%": Object {
    "transform": "translate3d(0, 100.63%, 0)",
  },
  "79%": Object {
    "transform": "translate3d(0, 100.59%, 0)",
  },
  "8%": Object {
    "transform": "translate3d(0, 57.27%, 0)",
  },
  "80%": Object {
    "transform": "translate3d(0, 100.55%, 0)",
  },
  "81%": Object {
    "transform": "translate3d(0, 100.51%, 0)",
  },
  "82%": Object {
    "transform": "translate3d(0, 100.46%, 0)",
  },
  "83%": Object {
    "transform": "translate3d(0, 100.41%, 0)",
  },
  "84%": Object {
    "transform": "translate3d(0, 100.35%, 0)",
  },
  "85%": Object {
    "transform": "translate3d(0, 100.3%, 0)",
  },
  "86%": Object {
    "transform": "translate3d(0, 100.25%, 0)",
  },
  "87%": Object {
    "transform": "translate3d(0, 100.2%, 0)",
  },
  "88%": Object {
    "transform": "translate3d(0, 100.15%, 0)",
  },
  "89%": Object {
    "transform": "translate3d(0, 100.11%, 0)",
  },
  "9%": Object {
    "transform": "translate3d(0, 64.27%, 0)",
  },
  "90%": Object {
    "transform": "translate3d(0, 100.06%, 0)",
  },
  "91%": Object {
    "transform": "translate3d(0, 100.03%, 0)",
  },
  "92%": Object {
    "transform": "translate3d(0, 99.99%, 0)",
  },
  "93%": Object {
    "transform": "translate3d(0, 99.96%, 0)",
  },
  "94%": Object {
    "transform": "translate3d(0, 99.94%, 0)",
  },
  "95%": Object {
    "transform": "translate3d(0, 99.92%, 0)",
  },
  "96%": Object {
    "transform": "translate3d(0, 99.9%, 0)",
  },
  "97%": Object {
    "transform": "translate3d(0, 99.89%, 0)",
  },
  "98%": Object {
    "transform": "translate3d(0, 99.88%, 0)",
  },
  "99%": Object {
    "transform": "translate3d(0, 99.87%, 0)",
  },
}
`;

exports[`css-spring matches snapshots 3`] = `
Object {
  "0%": Object {
    "transform": "translate3d(0, 11.62%, 0), scale3d(0, 0.98, 0)",
  },
  "1%": Object {
    "transform": "translate3d(0, 14.64%, 0), scale3d(0, 0.95, 0)",
  },
  "10%": Object {
    "transform": "translate3d(0, 71.08%, 0), scale3d(0, 0.32, 0)",
  },
  "100%": Object {
    "transform": "translate3d(0, 99.87%, 0), scale3d(0, 0)",
  },
  "11%": Object {
    "transform": "translate3d(0, 77.58%, 0), scale3d(0, 0.25, 0)",
  },
  "12%": Object {
    "transform": "translate3d(0, 83.72%, 0), scale3d(0, 0.18, 0)",
  },
  "13%": Object {
    "transform": "translate3d(0, 89.4%, 0), scale3d(0, 0.12, 0)",
  },
  "14%": Object {
    "transform": "translate3d(0, 94.6%, 0), scale3d(0, 0.06, 0)",
  },
  "15%": Object {
    "transform": "translate3d(0, 99.27%, 0), scale3d(0, 0.01, 0)",
  },
  "16%": Object {
    "transform": "translate3d(0, 103.39%, 0), scale3d(0, -0.04, 0)",
  },
  "17%": Object {
    "transform": "translate3d(0, 106.96%, 0), scale3d(0, -0.08, 0)",
  },
  "18%": Object {
    "transform": "translate3d(0, 109.98%, 0), scale3d(0, -0.11, 0)",
  },
  "19%": Object {
    "transform": "translate3d(0, 112.45%, 0), scale3d(0, -0.14, 0)",
  },
  "2%": Object {
    "transform": "translate3d(0, 18.83%, 0), scale3d(0, 0.9, 0)",
  },
  "20%": Object {
    "transform": "translate3d(0, 114.4%, 0), scale3d(0, -0.16, 0)",
  },
  "21%": Object {
    "transform": "translate3d(0, 115.86%, 0), scale3d(0, -0.18, 0)",
  },
  "22%": Object {
    "transform": "translate3d(0, 116.86%, 0), scale3d(0, -0.19, 0)",
  },
  "23%": Object {
    "transform": "translate3d(0, 117.43%, 0), scale3d(0, -0.19, 0)",
  },
  "24%": Object {
    "transform": "translate3d(0, 117.62%, 0), scale3d(0, -0.2, 0)",
  },
  "25%": Object {
    "transform": "translate3d(0, 117.47%, 0), scale3d(0, -0.19, 0)",
  },
  "26%": Object {
    "transform": "translate3d(0, 117.03%, 0), scale3d(0, -0.19, 0)",
  },
  "27%": Object {
    "transform": "translate3d(0, 116.33%, 0), scale3d(0, -0.18, 0)",
  },
  "28%": Object {
    "transform": "translate3d(0, 115.42%, 0), scale3d(0, -0.17, 0)",
  },
  "29%": Object {
    "transform": "translate3d(0, 114.35%, 0), scale3d(0, -0.16, 0)",
  },
  "3%": Object {
    "transform": "translate3d(0, 23.98%, 0), scale3d(0, 0.84, 0)",
  },
  "30%": Object {
    "transform": "translate3d(0, 113.14%, 0), scale3d(0, -0.15, 0)",
  },
  "31%": Object {
    "transform": "translate3d(0, 111.84%, 0), scale3d(0, -0.13, 0)",
  },
  "32%": Object {
    "transform": "translate3d(0, 110.49%, 0), scale3d(0, -0.12, 0)",
  },
  "33%": Object {
    "transform": "translate3d(0, 109.11%, 0), scale3d(0, -0.1, 0)",
  },
  "34%": Object {
    "transform": "translate3d(0, 107.73%, 0), scale3d(0, -0.09, 0)",
  },
  "35%": Object {
    "transform": "translate3d(0, 106.37%, 0), scale3d(0, -0.07, 0)",
  },
  "36%": Object {
    "transform": "translate3d(0, 105.07%, 0), scale3d(0, -0.06, 0)",
  },
  "37%": Object {
    "transform": "translate3d(0, 103.83%, 0), scale3d(0, -0.04, 0)",
  },
  "38%": Object {
    "transform": "translate3d(0, 102.67%, 0), scale3d(0, -0.03, 0)",
  },
  "39%": Object {
    "transform": "translate3d(0, 101.6%, 0), scale3d(0, -0.02, 0)",
  },
  "4%": Object {
    "transform": "translate3d(0, 29.88%, 0), scale3d(0, 0.78, 0)",
  },
  "40%": Object {
    "transform": "translate3d(0, 100.63%, 0), scale3d(0, -0.01, 0)",
  },
  "41%": Object {
    "transform": "translate3d(0, 99.77%, 0), scale3d(0, 0)",
  },
  "42%": Object {
    "transform": "translate3d(0, 99.01%, 0), scale3d(0, 0.01, 0)",
  },
  "43%": Object {
    "transform": "translate3d(0, 98.36%, 0), scale3d(0, 0.02, 0)",
  },
  "44%": Object {
    "transform": "translate3d(0, 97.82%, 0), scale3d(0, 0.02, 0)",
  },
  "45%": Object {
    "transform": "translate3d(0, 97.38%, 0), scale3d(0, 0.03, 0)",
  },
  "46%": Object {
    "transform": "translate3d(0, 97.05%, 0), scale3d(0, 0.03, 0)",
  },
  "47%": Object {
    "transform": "translate3d(0, 96.8%, 0), scale3d(0, 0.04, 0)",
  },
  "48%": Object {
    "transform": "translate3d(0, 96.65%, 0), scale3d(0, 0.04, 0)",
  },
  "49%": Object {
    "transform": "translate3d(0, 96.57%, 0), scale3d(0, 0.04, 0)",
  },
  "5%": Object {
    "transform": "translate3d(0, 36.33%, 0), scale3d(0, 0.71, 0)",
  },
  "50%": Object {
    "transform": "translate3d(0, 96.56%, 0), scale3d(0, 0.04, 0)",
  },
  "51%": Object {
    "transform": "translate3d(0, 96.62%, 0), scale3d(0, 0.04, 0)",
  },
  "52%": Object {
    "transform": "translate3d(0, 96.73%, 0), scale3d(0, 0.04, 0)",
  },
  "53%": Object {
    "transform": "translate3d(0, 96.89%, 0), scale3d(0, 0.03, 0)",
  },
  "54%": Object {
    "transform": "translate3d(0, 97.08%, 0), scale3d(0, 0.03, 0)",
  },
  "55%": Object {
    "transform": "translate3d(0, 97.3%, 0), scale3d(0, 0.03, 0)",
  },
  "56%": Object {
    "transform": "translate3d(0, 97.55%, 0), scale3d(0, 0.03, 0)",
  },
  "57%": Object {
    "transform": "translate3d(0, 97.81%, 0), scale3d(0, 0.02, 0)",
  },
  "58%": Object {
    "transform": "translate3d(0, 98.07%, 0), scale3d(0, 0.02, 0)",
  },
  "59%": Object {
    "transform": "translate3d(0, 98.34%, 0), scale3d(0, 0.02, 0)",
  },
  "6%": Object {
    "transform": "translate3d(0, 43.16%, 0), scale3d(0, 0.63, 0)",
  },
  "60%": Object {
    "transform": "translate3d(0, 98.61%, 0), scale3d(0, 0.02, 0)",
  },
  "61%": Object {
    "transform": "translate3d(0, 98.87%, 0), scale3d(0, 0.01, 0)",
  },
  "62%": Object {
    "transform": "translate3d(0, 99.12%, 0), scale3d(0, 0.01, 0)",
  },
  "63%": Object {
    "transform": "translate3d(0, 99.36%, 0), scale3d(0, 0.01, 0)",
  },
  "64%": Object {
    "transform": "translate3d(0, 99.58%, 0), scale3d(0, 0)",
  },
  "65%": Object {
    "transform": "translate3d(0, 99.78%, 0), scale3d(0, 0)",
  },
  "66%": Object {
    "transform": "translate3d(0, 99.96%, 0), scale3d(0, 0)",
  },
  "67%": Object {
    "transform": "translate3d(0, 100.12%, 0), scale3d(0, 0)",
  },
  "68%": Object {
    "transform": "translate3d(0, 100.25%, 0), scale3d(0, 0)",
  },
  "69%": Object {
    "transform": "translate3d(0, 100.37%, 0), scale3d(0, 0)",
  },
  "7%": Object {
    "transform": "translate3d(0, 50.19%, 0), scale3d(0, 0.55, 0)",
  },
  "70%": Object {
    "transform": "translate3d(0, 100.47%, 0), scale3d(0, -0.01, 0)",
  },
  "71%": Object {
    "transform": "translate3d(0, 100.54%, 0), scale3d(0, -0.01, 0)",
  },
  "72%": Object {
    "transform": "translate3d(0, 100.6%, 0), scale3d(0, -0.01, 0)",
  },
  "73%": Object {
    "transform": "translate3d(0, 100.64%, 0), scale3d(0, -0.01, 0)",
  },
  "74%": Object {
    "transform": "translate3d(0, 100.66%, 0), scale3d(0, -0.01, 0)",
  },
  "75%": Object {
    "transform": "translate3d(0, 100.67%, 0), scale3d(0, 0)",
  },
  "76%": Object {
    "transform": "translate3d(0, 100.67%, 0), scale3d(0, 0)",
  },
  "77%": Object {
    "transform": "translate3d(0, 100.65%, 0), scale3d(0, 0)",
  },
  "78%": Object {
    "transform": "translate3d(0, 100.63%, 0), scale3d(0, 0)",
  },
  "79%": Object {
    "transform": "translate3d(0, 100.59%, 0), scale3d(0, 0)",
  },
  "8%": Object {
    "transform": "translate3d(0, 57.27%, 0), scale3d(0, 0.47, 0)",
  },
  "80%": Object {
    "transform": "translate3d(0, 100.55%, 0), scale3d(0, 0)",
  },
  "81%": Object {
    "transform": "translate3d(0, 100.51%, 0), scale3d(0, 0)",
  },
  "82%": Object {
    "transform": "translate3d(0, 100.46%, 0), scale3d(0, 0)",
  },
  "83%": Object {
    "transform": "translate3d(0, 100.41%, 0), scale3d(0, 0)",
  },
  "84%": Object {
    "transform": "translate3d(0, 100.35%, 0), scale3d(0, 0)",
  },
  "85%": Object {
    "transform": "translate3d(0, 100.3%, 0), scale3d(0, 0)",
  },
  "86%": Object {
    "transform": "translate3d(0, 100.25%, 0), scale3d(0, 0)",
  },
  "87%": Object {
    "transform": "translate3d(0, 100.2%, 0), scale3d(0, 0)",
  },
  "88%": Object {
    "transform": "translate3d(0, 100.15%, 0), scale3d(0, 0)",
  },
  "89%": Object {
    "transform": "translate3d(0, 100.11%, 0), scale3d(0, 0)",
  },
  "9%": Object {
    "transform": "translate3d(0, 64.27%, 0), scale3d(0, 0.4, 0)",
  },
  "90%": Object {
    "transform": "translate3d(0, 100.06%, 0), scale3d(0, 0)",
  },
  "91%": Object {
    "transform": "translate3d(0, 100.03%, 0), scale3d(0, 0)",
  },
  "92%": Object {
    "transform": "translate3d(0, 99.99%, 0), scale3d(0, 0)",
  },
  "93%": Object {
    "transform": "translate3d(0, 99.96%, 0), scale3d(0, 0)",
  },
  "94%": Object {
    "transform": "translate3d(0, 99.94%, 0), scale3d(0, 0)",
  },
  "95%": Object {
    "transform": "translate3d(0, 99.92%, 0), scale3d(0, 0)",
  },
  "96%": Object {
    "transform": "translate3d(0, 99.9%, 0), scale3d(0, 0)",
  },
  "97%": Object {
    "transform": "translate3d(0, 99.89%, 0), scale3d(0, 0)",
  },
  "98%": Object {
    "transform": "translate3d(0, 99.88%, 0), scale3d(0, 0)",
  },
  "99%": Object {
    "transform": "translate3d(0, 99.87%, 0), scale3d(0, 0)",
  },
}
`;

exports[`css-spring matches snapshots 4`] = `
Object {
  "0%": Object {
    "background": "#bbd653",
    "padding-left": "-48px",
  },
  "1%": Object {
    "background": "#becf51",
    "padding-left": "-45px",
  },
  "10%": Object {
    "background": "#e9461b",
    "padding-left": "18px",
  },
  "100%": Object {
    "background": "#ff0000",
    "padding-left": "50px",
  },
  "11%": Object {
    "background": "#ee3615",
    "padding-left": "25px",
  },
  "12%": Object {
    "background": "#f3270f",
    "padding-left": "32px",
  },
  "13%": Object {
    "background": "#f71a0a",
    "padding-left": "38px",
  },
  "14%": Object {
    "background": "#fb0d05",
    "padding-left": "44px",
  },
  "15%": Object {
    "background": "#fe0201",
    "padding-left": "49px",
  },
  "16%": Object {
    "background": "#ff0000",
    "padding-left": "54px",
  },
  "17%": Object {
    "padding-left": "58px",
  },
  "18%": Object {
    "padding-left": "61px",
  },
  "19%": Object {
    "padding-left": "64px",
  },
  "2%": Object {
    "background": "#c1c54d",
    "padding-left": "-40px",
  },
  "20%": Object {
    "padding-left": "66px",
  },
  "21%": Object {
    "padding-left": "68px",
  },
  "22%": Object {
    "padding-left": "69px",
  },
  "23%": Object {
    "padding-left": "69px",
  },
  "24%": Object {
    "padding-left": "70px",
  },
  "25%": Object {
    "padding-left": "69px",
  },
  "26%": Object {
    "padding-left": "69px",
  },
  "27%": Object {
    "padding-left": "68px",
  },
  "28%": Object {
    "padding-left": "67px",
  },
  "29%": Object {
    "padding-left": "66px",
  },
  "3%": Object {
    "background": "#c5b848",
    "padding-left": "-34px",
  },
  "30%": Object {
    "padding-left": "65px",
  },
  "31%": Object {
    "padding-left": "63px",
  },
  "32%": Object {
    "padding-left": "62px",
  },
  "33%": Object {
    "padding-left": "60px",
  },
  "34%": Object {
    "padding-left": "59px",
  },
  "35%": Object {
    "padding-left": "57px",
  },
  "36%": Object {
    "padding-left": "56px",
  },
  "37%": Object {
    "padding-left": "54px",
  },
  "38%": Object {
    "padding-left": "53px",
  },
  "39%": Object {
    "padding-left": "52px",
  },
  "4%": Object {
    "background": "#c9aa42",
    "padding-left": "-28px",
  },
  "40%": Object {
    "background": "#ff0000",
    "padding-left": "51px",
  },
  "41%": Object {
    "background": "#ff0100",
    "padding-left": "50px",
  },
  "42%": Object {
    "background": "#fe0201",
    "padding-left": "49px",
  },
  "43%": Object {
    "background": "#fe0402",
    "padding-left": "48px",
  },
  "44%": Object {
    "background": "#fd0502",
    "padding-left": "48px",
  },
  "45%": Object {
    "background": "#fd0602",
    "padding-left": "47px",
  },
  "46%": Object {
    "background": "#fd0703",
    "padding-left": "47px",
  },
  "47%": Object {
    "background": "#fd0803",
    "padding-left": "46px",
  },
  "48%": Object {
    "background": "#fc0803",
  },
  "5%": Object {
    "background": "#ce9a3c",
    "padding-left": "-21px",
  },
  "52%": Object {
    "background": "#fc0803",
    "padding-left": "46px",
  },
  "53%": Object {
    "background": "#fd0803",
    "padding-left": "47px",
  },
  "54%": Object {
    "background": "#fd0703",
  },
  "55%": Object {
    "background": "#fd0703",
  },
  "56%": Object {
    "background": "#fd0602",
    "padding-left": "47px",
  },
  "57%": Object {
    "background": "#fd0502",
    "padding-left": "48px",
  },
  "58%": Object {
    "background": "#fe0502",
  },
  "59%": Object {
    "background": "#fe0402",
  },
  "6%": Object {
    "background": "#d38a36",
    "padding-left": "-13px",
  },
  "60%": Object {
    "background": "#fe0301",
    "padding-left": "48px",
  },
  "61%": Object {
    "background": "#fe0301",
    "padding-left": "49px",
  },
  "62%": Object {
    "background": "#fe0201",
  },
  "63%": Object {
    "background": "#ff0201",
    "padding-left": "49px",
  },
  "64%": Object {
    "background": "#ff0100",
    "padding-left": "50px",
  },
  "65%": Object {
    "background": "#ff0100",
  },
  "66%": Object {
    "background": "#ff0000",
  },
  "69%": Object {
    "padding-left": "50px",
  },
  "7%": Object {
    "background": "#d9792f",
    "padding-left": "-5px",
  },
  "70%": Object {
    "padding-left": "51px",
  },
  "8%": Object {
    "background": "#de6828",
    "padding-left": "3px",
  },
  "82%": Object {
    "padding-left": "51px",
  },
  "83%": Object {
    "padding-left": "50px",
  },
  "9%": Object {
    "background": "#e45722",
    "padding-left": "10px",
  },
}
`;

exports[`css-spring matches snapshots 5`] = `
Object {
  "0%": Object {
    "border": "1px solid #f00",
    "margin-right": "1.52em",
  },
  "1%": Object {
    "border": "1px solid #f00",
    "margin-right": "4.34em",
  },
  "10%": Object {
    "border": "5px solid #f00",
    "margin-right": "57.97em",
  },
  "100%": Object {
    "border": "10px solid #f00",
    "margin-right": "127.01em",
  },
  "11%": Object {
    "border": "6px solid #f00",
    "margin-right": "64.64em",
  },
  "12%": Object {
    "margin-right": "71.12em",
  },
  "13%": Object {
    "border": "6px solid #f00",
    "margin-right": "77.37em",
  },
  "14%": Object {
    "border": "7px solid #f00",
    "margin-right": "83.33em",
  },
  "15%": Object {
    "border": "7px solid #f00",
    "margin-right": "88.99em",
  },
  "16%": Object {
    "border": "8px solid #f00",
    "margin-right": "94.31em",
  },
  "17%": Object {
    "margin-right": "99.28em",
  },
  "18%": Object {
    "border": "8px solid #f00",
    "margin-right": "103.88em",
  },
  "19%": Object {
    "border": "9px solid #f00",
    "margin-right": "108.12em",
  },
  "2%": Object {
    "border": "2px solid #f00",
    "margin-right": "8.23em",
  },
  "20%": Object {
    "margin-right": "111.99em",
  },
  "21%": Object {
    "margin-right": "115.5em",
  },
  "22%": Object {
    "border": "9px solid #f00",
    "margin-right": "118.65em",
  },
  "23%": Object {
    "border": "10px solid #f00",
    "margin-right": "121.47em",
  },
  "24%": Object {
    "margin-right": "123.96em",
  },
  "25%": Object {
    "margin-right": "126.13em",
  },
  "26%": Object {
    "margin-right": "128.01em",
  },
  "27%": Object {
    "margin-right": "129.62em",
  },
  "28%": Object {
    "margin-right": "130.97em",
  },
  "29%": Object {
    "margin-right": "132.08em",
  },
  "3%": Object {
    "margin-right": "13.01em",
  },
  "30%": Object {
    "margin-right": "132.97em",
  },
  "31%": Object {
    "border": "10px solid #f00",
    "margin-right": "133.67em",
  },
  "32%": Object {
    "border": "11px solid #f00",
    "margin-right": "134.19em",
  },
  "33%": Object {
    "margin-right": "134.56em",
  },
  "34%": Object {
    "margin-right": "134.78em",
  },
  "35%": Object {
    "margin-right": "134.87em",
  },
  "36%": Object {
    "margin-right": "134.86em",
  },
  "37%": Object {
    "margin-right": "134.76em",
  },
  "38%": Object {
    "margin-right": "134.57em",
  },
  "39%": Object {
    "border": "11px solid #f00",
    "margin-right": "134.33em",
  },
  "4%": Object {
    "border": "2px solid #f00",
    "margin-right": "18.48em",
  },
  "40%": Object {
    "border": "10px solid #f00",
    "margin-right": "134.02em",
  },
  "41%": Object {
    "margin-right": "133.68em",
  },
  "42%": Object {
    "margin-right": "133.31em",
  },
  "43%": Object {
    "margin-right": "132.91em",
  },
  "44%": Object {
    "margin-right": "132.49em",
  },
  "45%": Object {
    "margin-right": "132.07em",
  },
  "46%": Object {
    "margin-right": "131.65em",
  },
  "47%": Object {
    "margin-right": "131.23em",
  },
  "48%": Object {
    "margin-right": "130.82em",
  },
  "49%": Object {
    "margin-right": "130.42em",
  },
  "5%": Object {
    "border": "3px solid #f00",
    "margin-right": "24.49em",
  },
  "50%": Object {
    "margin-right": "130.03em",
  },
  "51%": Object {
    "margin-right": "129.66em",
  },
  "52%": Object {
    "margin-right": "129.32em",
  },
  "53%": Object {
    "margin-right": "128.99em",
  },
  "54%": Object {
    "margin-right": "128.68em",
  },
  "55%": Object {
    "margin-right": "128.4em",
  },
  "56%": Object {
    "margin-right": "128.14em",
  },
  "57%": Object {
    "margin-right": "127.9em",
  },
  "58%": Object {
    "margin-right": "127.69em",
  },
  "59%": Object {
    "margin-right": "127.5em",
  },
  "6%": Object {
    "border": "3px solid #f00",
    "margin-right": "30.89em",
  },
  "60%": Object {
    "margin-right": "127.32em",
  },
  "61%": Object {
    "margin-right": "127.17em",
  },
  "62%": Object {
    "margin-right": "127.04em",
  },
  "63%": Object {
    "margin-right": "126.93em",
  },
  "64%": Object {
    "margin-right": "126.83em",
  },
  "65%": Object {
    "margin-right": "126.75em",
  },
  "66%": Object {
    "margin-right": "126.68em",
  },
  "67%": Object {
    "margin-right": "126.62em",
  },
  "68%": Object {
    "margin-right": "126.58em",
  },
  "69%": Object {
    "margin-right": "126.55em",
  },
  "7%": Object {
    "border": "4px solid #f00",
    "margin-right": "37.55em",
  },
  "70%": Object {
    "margin-right": "126.53em",
  },
  "71%": Object {
    "margin-right": "126.52em",
  },
  "72%": Object {
    "margin-right": "126.51em",
  },
  "73%": Object {
    "margin-right": "126.51em",
  },
  "74%": Object {
    "margin-right": "126.52em",
  },
  "75%": Object {
    "margin-right": "126.53em",
  },
  "76%": Object {
    "margin-right": "126.55em",
  },
  "77%": Object {
    "margin-right": "126.57em",
  },
  "78%": Object {
    "margin-right": "126.59em",
  },
  "79%": Object {
    "margin-right": "126.61em",
  },
  "8%": Object {
    "border": "4px solid #f00",
    "margin-right": "44.34em",
  },
  "80%": Object {
    "margin-right": "126.64em",
  },
  "81%": Object {
    "margin-right": "126.66em",
  },
  "82%": Object {
    "margin-right": "126.69em",
  },
  "83%": Object {
    "margin-right": "126.72em",
  },
  "84%": Object {
    "margin-right": "126.74em",
  },
  "85%": Object {
    "margin-right": "126.77em",
  },
  "86%": Object {
    "margin-right": "126.79em",
  },
  "87%": Object {
    "margin-right": "126.81em",
  },
  "88%": Object {
    "margin-right": "126.84em",
  },
  "89%": Object {
    "margin-right": "126.86em",
  },
  "9%": Object {
    "border": "5px solid #f00",
    "margin-right": "51.18em",
  },
  "90%": Object {
    "margin-right": "126.88em",
  },
  "91%": Object {
    "margin-right": "126.9em",
  },
  "92%": Object {
    "margin-right": "126.92em",
  },
  "93%": Object {
    "margin-right": "126.93em",
  },
  "94%": Object {
    "margin-right": "126.95em",
  },
  "95%": Object {
    "margin-right": "126.96em",
  },
  "96%": Object {
    "margin-right": "126.97em",
  },
  "97%": Object {
    "margin-right": "126.98em",
  },
  "98%": Object {
    "margin-right": "126.99em",
  },
  "99%": Object {
    "margin-right": "127em",
  },
}
`;
